--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </form>
 
 <script>
-  const scriptURL = '<SCRIPT URL>'
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbyv1CyD0tWXCYdH9V5kxKIDb0WMyb7xb8nrHRYpiWv3TH3cvrs/exec'
   const form = document.forms['submit-to-google-sheet']
 
   form.addEventListener('submit', e => {
